--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8080
 server.address=0.0.0.0
+
+# Logging configuration
+logging.file.name=logs/application.log
+logging.level.com.products=DEBUG
+logging.level.org.springframework=INFO
+logging.level.org.hibernate=WARN
+
+# Log4j2 async logging
+spring.log4j2.config.override=log4j2.xml
