--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,12 @@ logging.level.com.products=DEBUG
 logging.level.org.springframework=INFO
 logging.level.org.hibernate=WARN
 
-# Log4j2 async logging
 spring.log4j2.config.override=log4j2.xml
+
+
+otel.traces.exporter=otlp
+otel.exporter.otlp.endpoint=http://localhost:4318
+
+otel.propagation.type=w3c
+
+otel.service.name=backend-product-app
